name:                brick-demo
version:             0.1.0.0
license:             BSD2
license-file:        LICENSE
author:              Karl Voelker
maintainer:          karl@karlv.net
build-type:          Simple
cabal-version:       >=1.10

executable brick-demo
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.8 && < 4.9, brick, vector, vty
  other-extensions:
    OverloadedLists
    OverloadedStrings
